# Utility

./: CMakeLists.txt
inc/: utility.hpp
src/: utility.cpp
